src/test/deca/syntax/valid/AvecObjet/CastMult.deca
//Description
//  test de plusieurs Cast entre classes
//
//Réponse
// ok

class A {
    int x;
}

class B {
    int y;
}

{
    A a = new A();
    B b = new B();

    a = (A) (b);
    b = (B) (a);
}