src/test/deca/syntax/invalid/AvecObjet/NewFaute.deca
//Description
//  test de faute dans new
//
//Réponse
//  Erreur syntaxique ligne 13
//  no viable alternative at input 'A'

class A {
    int x;
}

{
    A b = nex A();
}